Uploaded all files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Home Page</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,9 +17,10 @@
             <h2 class="text-box__content">Welcome!!</h2>
         </div>
         <ul class="navigation__list">
-            <li class="navigation__item"><a href="contact.html" class="navigation__link">Contact</a></li>
-            <li class="navigation__item"><a href="register.html" class="navigation__link">Register</a></li>
-            <li class="navigation__item"><a href="login.html" class="navigation__link">Login</a></li>
+            <li class="navigation__item"><a href="contact.html" class="navigation__link" target="_blank">Contact</a></li>
+            <li class="navigation__item"><a href="register.html" class="navigation__link" target="_blank">Register</a></li>
+            <li class="navigation__item"><a href="login.html" class="navigation__link" target="_blank">Login</a></li>
+            <li class="navigation__item"><a href="calculator.html" class="navigation__link" target="_blank">Calculator</a></li>
         </ul>
     </nav>
     <main>
@@ -35,13 +36,21 @@
                 <img src="img/kene.jpeg" alt="image" class="my-image">
             </div>
             <div class="about__content">
-                <h3 class="heading-secondary">About me</h3>
-                <p class="sentence">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, fuga soluta dicta ratione saepe dolor voluptatum quas. Quidem esse distinctio, reprehenderit autem mollitia, illum dolorum explicabo harum veniam aliquid fuga!
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt nulla cumque sapiente error, possimus iusto accusamus assumenda reiciendis quod minima autem temporibus impedit repellat rem dolore repellendus consequuntur voluptate neque?
+                <h3 class="heading-secondary heading-secondary__white">About me</h3>
+                <p class="sentence">
+                    I’m an enthusiastic and detail-oriented Frontend Software Engineer seeking an entry-level position with Company to use my  skills in coding, troubleshooting complex problems, and assisting in the timely completion of projects. I'm highly motivated and very imaginative. I solve problems by finding inspirations in everyday things, pushing my own boundaries and allowing myself to think out of the box.<br>
+                    I am a front-end web developer with an eye for pixel perfect design. I make the web more & more interactive with beautiful web animations. I can provide clean and efficient code that appears beautiful across all screen sizes.
+                     
                 </p>
 
-                <p class="goal">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt nulla cumque sapiente error, possimus iusto accusamus assumenda reiciendis quod minima autem temporibus impedit repellat rem dolore repellendus consequuntur voluptate neque?
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt nulla cumque sapiente error, possimus iusto accusamus assumenda reiciendis quod minima autem temporibus impedit repellat rem dolore repellendus consequuntur voluptate neque?
+                <p class="goal">
+                    My goals for this diploma course, in no particular order are:
+                    <ul class="goals">
+                        <li class="my__goals">To be a world-class frontend developer🚀🚀</li>
+                        <li class="my__goals">To gain useful connections and expand my social network</li>
+                        <li class="my__goals">To combine technology and design to create inviting, easy-to-use websites for consumers</li>
+                        <li class="my__goals">To learn the required skills, improve on them, and become a certified developer</li>
+                    </ul>
                 </p>
             </div>
             
@@ -63,7 +72,7 @@
         </section>
 
         <section class="extra">
-            <h3 class="heading-secondary">Hobbies</h3>
+            <h3 class="heading-secondary heading-secondary__white">Hobbies</h3>
             <div class="hobbies__content">
                 <div class="hobby__container">
                     <figure class="hobby">
@@ -72,7 +81,7 @@
                     </figure>
 
                     <figure class="hobby">
-                        <img class="hobby__img" src="img/coding.png" alt="coding">
+                        <img class="hobby__img" src="img/picture.jpeg" alt="coding">
                         <figcaption class="hobby__text">I have grown to fall in love with coding, and even the frustrations it comes with😂</figcaption>
                     </figure>
 
